--- a/config.yaml
+++ b/config.yaml
@@ -1,40 +1,40 @@
-experiment_name: ksparse_parity_demo
+experiment_name: ksparse_parity_1511_new
 seed: 123
 device: cpu
 
 dataset:
   d: 35
   k: 4
-  n_train: 5000
+  n_train: 75000
   n_val: 500
   n_test: 2000
   label_noise: 0.0
   x_dist: pm1   # or: bernoulli01
 
 model:
-  widths: [128, 128, 128]
+  widths: [256,256]
   use_gates: true  # false -> plain ReLU network
   bias: false
 
 training:
   algo: alt_em_closed_form   # NOTE: All algorithms (sgd_relu, alt_em_sgd, alt_em_closed_form) run sequentially automatically
-  epochs: 200                 # used only by sgd_relu
-  batch_size: 1024
+  epochs: 400                 # used only by sgd_relu
+  batch_size: 2048
   lr_w: 1e-3                 # for SGD variants
   lr_a: 1e-3
-  cycles: 10                 # for alternating algorithms
-  steps_w_per_cycle: 200     # for alt_em_sgd
-  steps_a_per_cycle: 100     # for alt_em_sgd
+  cycles: 100                 # for alternating algorithms
+  steps_w_per_cycle: 20     # for alt_em_sgd
+  steps_a_per_cycle: 20     # for alt_em_sgd
   ridge_w: 1e-4              # ridge for closed-form W-step
   ridge_a: 1e-4              # ridge for closed-form A-step
   loss: mse                  # squared loss (labels in {-1,+1})
 
 regularization:
-  identity_reg: true
+  identity_reg: false
   lambda_identity: 1e-3
 
 pruning:
-  enabled: true
+  enabled: false
   tau: 0.0     # prune if |a-1| <= tau (both sides)
 
 logging:
