--- a/configs/config_hierarchical_xor.yaml
+++ b/configs/config_hierarchical_xor.yaml
@@ -1,7 +1,7 @@
 # config_hierarchical_xor.yaml
-experiment_name: 24_11/hierarchical_xor_run_3
+experiment_name: 27_11/hierarchical_xor_run_2
 seed: 123
-device: cpu
+device: cuda  # Use GPU (H100) - set to 'cpu' if no GPU available
 
 dataset:
   name: hierarchical_xor          # <--- use new hierarchical XOR dataset
@@ -10,7 +10,7 @@ dataset:
   m: 2
   s: 4
   # sizes (can be a list to train on multiple sizes)
-  n_train: [5000,100,500,1000,2500,7500,10000]  #[128, 512, 1024, 2048, 3072, 5120, 7168, 8192, 12288, 16384, 18432, 22528, 28672, 32768]
+  n_train: [500,100,5000,1000,2500,7500,10000]  #[128, 512, 1024, 2048, 3072, 5120, 7168, 8192, 12288, 16384, 18432, 22528, 28672, 32768]
   n_val: 2000
   n_test: 5000
   # nuisance
@@ -67,10 +67,13 @@ logging:
   save_checkpoints: true
   save_model: true  # Set to false to skip saving model files (saves disk space)
   # Computation frequency controls (for speed optimization)
-  # Path metrics: Compute full path metrics every N epochs (only for epoch-based training like sgd_joint)
-  # NOTE: For alternating EM algorithms (alt_em_sgd, alt_em_closed_form), path metrics are ALWAYS computed every cycle
-  # Path hashes are still computed every cycle/epoch for confident churn tracking
-  path_metrics_every_n_epochs: 250  # Set to 1 to compute every epoch (slower but more detailed)
+  # Path metrics: 
+  #   - For cycle-based algorithms (alt_em_sgd, alt_em_closed_form): computed EVERY cycle
+  #   - For epoch-based algorithms (sgd_relu, sgd_joint): computed every N epochs (set below)
+  path_metrics_every_n_epochs: 200  # For epoch-based training: set to 1 to compute every epoch
   # Effective rank: Uses SVD which is expensive. Compute every N cycles/epochs
-  effective_rank_every_n_cycles: 50  # Set to 1 to compute every cycle (slower)
+  effective_rank_every_n_cycles: 1  # Set to 1 to compute every cycle (slower)
+  # Path kernel metrics: Very expensive (SVD on large matrices). Reduce frequency for speed.
+  path_kernel_metrics_every_n_cycles: 5  # For cycle-based: compute every N cycles (default: 1 = every cycle, very slow!)
+  path_kernel_metrics_every_n_epochs: 200  # For epoch-based: compute every N epochs (default: 1 = every epoch, very slow!)
 
