--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -13,29 +13,15 @@ dataset:
 
 model:
   widths: [256,256]
-  use_gates: true  # false -> plain ReLU network
+  activation: relu  # Options: relu, gelu, tanh, sigmoid, elu
   bias: false
 
 training:
-  algo: alt_em_closed_form   # NOTE: All algorithms (sgd_relu, alt_em_sgd, alt_em_closed_form) run sequentially automatically
-  epochs: 800                 # used only by sgd_relu
+  algo: sgd  # Only 'sgd' is supported
+  epochs: 800
   batch_size: 4096
-  lr_w: 7e-4                 # for SGD variants
-  lr_a: 7e-4
-  cycles: 100                 # for alternating algorithms
-  steps_w_per_cycle: 200     # for alt_em_sgd
-  steps_a_per_cycle: 200     # for alt_em_sgd
-  ridge_w: 1e-4              # ridge for closed-form W-step
-  ridge_a: 1e-4              # ridge for closed-form A-step
-  loss: mse                  # squared loss (labels in {-1,+1})
-
-regularization:
-  identity_reg: false
-  lambda_identity: 1e-3
-
-pruning:
-  enabled: true
-  tau: 0.01     # prune if |a-1| <= tau (both sides)
+  lr_w: 7e-4  # Learning rate for SGD
+  loss: mse   # squared loss (labels in {-1,+1})
 
 logging:
   eval_every_cycle: true
